<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/title6"
    android:stretchColumns="0"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/difficulty1"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:text="@string/difficulty2"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="65dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/difficulty3"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="125dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="300dp">
        <RadioButton
            android:id="@+id/button_difficulty1"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
        <RadioButton
            android:id="@+id/button_difficulty2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"/>
        <RadioButton
            android:id="@+id/button_difficulty3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"/>
    </RadioGroup>







</RelativeLayout>
